packagelon com.twittelonr.simclustelonrs_v2.scalding.elonmbelondding.common

import com.twittelonr.algelonbird.Aggrelongator
import com.twittelonr.common.telonxt.languagelon.LocalelonUtil
import com.twittelonr.elonschelonrbird.common.thriftscala.Localelon
import com.twittelonr.elonschelonrbird.common.thriftscala.LocalizelondUselonr
import com.twittelonr.elonschelonrbird.melontadata.thriftscala.FullMelontadata
import com.twittelonr.elonschelonrbird.scalding.sourcelon.FullMelontadataSourcelon
import com.twittelonr.elonschelonrbird.scalding.sourcelon.utt.UttSourcelonScalaDataselont
import com.twittelonr.elonschelonrbird.utt.strato.thriftscala.SnapshotTypelon
import com.twittelonr.elonschelonrbird.utt.thriftscala.UttelonntityReloncord
import com.twittelonr.intelonrelonsts_ds.jobs.intelonrelonsts_selonrvicelon.UselonrTopicRelonlationSnapshotScalaDataselont
import com.twittelonr.intelonrelonsts.thriftscala.IntelonrelonstRelonlationTypelon
import com.twittelonr.intelonrelonsts.thriftscala.UselonrIntelonrelonstsRelonlationSnapshot
import com.twittelonr.pelonnguin.scalding.dataselonts.PelonnguinUselonrLanguagelonsScalaDataselont
import com.twittelonr.scalding.DatelonOps
import com.twittelonr.scalding.DatelonRangelon
import com.twittelonr.scalding.Days
import com.twittelonr.scalding.Stat
import com.twittelonr.scalding.TypelondPipelon
import com.twittelonr.scalding.UniquelonID
import com.twittelonr.scalding.ValuelonPipelon
import com.twittelonr.scalding_intelonrnal.dalv2.DAL
import com.twittelonr.scalding_intelonrnal.dalv2.relonmotelon_accelonss.elonxplicitLocation
import com.twittelonr.scalding_intelonrnal.dalv2.relonmotelon_accelonss.AllowCrossClustelonrSamelonDC
import com.twittelonr.scalding_intelonrnal.dalv2.relonmotelon_accelonss.ProcAtla
import com.twittelonr.scalding_intelonrnal.multiformat.format.kelonyval.KelonyVal
import com.twittelonr.simclustelonrs_v2.common.UselonrId
import com.twittelonr.simclustelonrs_v2.common._
import com.twittelonr.simclustelonrs_v2.hdfs_sourcelons.SimclustelonrsV2IntelonrelonstelondIn20M145KUpdatelondScalaDataselont
import com.twittelonr.simclustelonrs_v2.hdfs_sourcelons.UselonrUselonrFavGraphScalaDataselont
import com.twittelonr.scalding_intelonrnal.dalv2.relonmotelon_accelonss.AllowCrossDC
import com.twittelonr.common_helonadelonr.thriftscala.CommonHelonadelonr
import com.twittelonr.common_helonadelonr.thriftscala.IdTypelon
import com.twittelonr.common_helonadelonr.thriftscala.VelonrsionelondCommonHelonadelonr
import flockdb_tools.dataselonts.flock.FlockBlockselondgelonsScalaDataselont
import flockdb_tools.dataselonts.flock.FlockFollowselondgelonsScalaDataselont
import flockdb_tools.dataselonts.flock.FlockRelonportAsAbuselonelondgelonsScalaDataselont
import flockdb_tools.dataselonts.flock.FlockRelonportAsSpamelondgelonsScalaDataselont
import twadoop_config.configuration.log_catelongorielons.group.selonarch.AdaptivelonSelonarchScalaDataselont
import com.twittelonr.selonarch.adaptivelon.scribing.thriftscala.AdaptivelonSelonarchScribelonLog
import twadoop_config.configuration.log_catelongorielons.group.timelonlinelon.TimelonlinelonSelonrvicelonFavoritelonsScalaDataselont
import twelonelontsourcelon.common.UnhydratelondFlatScalaDataselont
import com.twittelonr.frigatelon.data_pipelonlinelon.magicreloncs.magicreloncs_notifications_litelon.thriftscala.MagicReloncsNotificationLitelon
import com.twittelonr.simclustelonrs_v2.thriftscala.ClustelonrsUselonrIsIntelonrelonstelondIn
import com.twittelonr.simclustelonrs_v2.thriftscala.elondgelonWithDeloncayelondWelonights
import com.twittelonr.timelonlinelonselonrvicelon.thriftscala.ContelonxtualizelondFavoritelonelonvelonnt
import com.twittelonr.timelonlinelonselonrvicelon.thriftscala.FavoritelonelonvelonntUnion
import com.twittelonr.twelonelontsourcelon.common.thriftscala.UnhydratelondFlatTwelonelont
import com.twittelonr.uselonrsourcelon.snapshot.flat.UselonrsourcelonFlatScalaDataselont
import com.twittelonr.wtf.elonntity_relonal_graph.scalding.common.DataselontConstants
import com.twittelonr.wtf.elonntity_relonal_graph.scalding.common.SelonmanticCorelonFiltelonrs
import com.twittelonr.wtf.scalding.clielonnt_elonvelonnt_procelonssing.thriftscala.IntelonractionDelontails
import com.twittelonr.wtf.scalding.clielonnt_elonvelonnt_procelonssing.thriftscala.IntelonractionTypelon
import com.twittelonr.wtf.scalding.clielonnt_elonvelonnt_procelonssing.thriftscala.TwelonelontImprelonssionDelontails
import com.twittelonr.frigatelon.data_pipelonlinelon.scalding.magicreloncs.magicreloncs_notification_litelon.MagicreloncsNotificationLitelon1DayLagScalaDataselont
import com.twittelonr.ielonsourcelon.thriftscala.Intelonractionelonvelonnt
import com.twittelonr.ielonsourcelon.thriftscala.IntelonractionTargelontTypelon
import com.twittelonr.wtf.scalding.jobs.clielonnt_elonvelonnt_procelonssing.UselonrIntelonractionScalaDataselont
import java.util.TimelonZonelon
import com.twittelonr.intelonrelonsts_ds.jobs.intelonrelonsts_selonrvicelon.UselonrIntelonrelonstRelonlationSnapshotScalaDataselont
import com.twittelonr.simclustelonrs_v2.scalding.elonmbelondding.common.elonmbelonddingUtil.UselonrId
import com.twittelonr.scalding.typelond.{ValuelonPipelon => TypelondValuelonPipelon}
import com.twittelonr.twelonelontsourcelon.common.thriftscala.UnhydratelondTwelonelont
import twelonelontsourcelon.common.UnhydratelondScalaDataselont

objelonct elonxtelonrnalDataSourcelons {
  val UTTDomain = 131L
  val uselonrsourcelonColumns = Selont("id", "account_country_codelon", "languagelon")
  val ValidFlockelondgelonStatelonId = 0

  delonf gelontStandardLanguagelonCodelon(languagelon: String): Option[String] = {
    val localelon = LocalelonUtil.gelontLocalelonOf(languagelon)
    if (localelon == LocalelonUtil.UNKNOWN) Nonelon elonlselon Somelon(localelon.gelontLanguagelon)
  }

  // Relonads UTT elonntity Reloncords (`utt_sourcelon` dataselont)
  delonf gelontUttelonntityReloncords(implicit timelonZonelon: TimelonZonelon): TypelondPipelon[UttelonntityReloncord] = {
    DAL
      .relonadMostReloncelonntSnapshotNoOldelonrThan(UttSourcelonScalaDataselont, Days(14))
      .withRelonmotelonRelonadPolicy(elonxplicitLocation(ProcAtla))
      .toTypelondPipelon
  }

  /**
   * elonxtracts thelon KGO selonelonds from thelon UTT elonntity Reloncords.
   * Uselons thelon most reloncelonnt "Stablelon" velonrsion by delonfault unlelonss speloncifielond othelonrwiselon.
   *
   * @param uttVelonrsion UTT Velonrsion to uselon instelonad of thelon delonfault valuelon.
   */
  delonf gelontLocalelonProducelonrSelonelondIdsFromUttelonntityReloncords(
    uttVelonrsion: Option[Long] = Nonelon
  )(
    implicit timelonZonelon: TimelonZonelon,
    uniquelonId: UniquelonID
  ): TypelondPipelon[((TopicId, Languagelon), Selonq[UselonrId])] = {

    val topicLangPairCount = Stat("topic_lang_pair_count_all")
    val topicLangPairCountelonmptySelonelond = Stat("topic_lang_pair_count_elonmpty_selonelond")
    val topicLangPairCountLtelonOnelonSelonelond = Stat("topic_lang_pair_count_ltelon_onelon_selonelond")
    val topicLangPairCountLtelonFivelonSelonelonds = Stat("topic_lang_pair_count_ltelon_fivelon_selonelonds")
    val topicLangPairCountLtelonTelonnSelonelonds = Stat("topic_lang_pair_count_ltelon_telonn_selonelonds")

    val uttelonntityReloncords: TypelondPipelon[UttelonntityReloncord] = gelontUttelonntityReloncords

    val uttVelonrsionToUselon: ValuelonPipelon[Long] = uttVelonrsion match {
      caselon Somelon(uttVelonrsionValuelon) =>
        TypelondValuelonPipelon(uttVelonrsionValuelon)
      caselon _ => // find thelon most reloncelonnt "stablelon" velonrsion as reloncommelonndelond by thelon SelonmanticCorelon telonam
        uttelonntityReloncords
          .filtelonr(_.snapshotTypelon.elonxists(_ == SnapshotTypelon.Stablelon))
          .map(_.velonrsion)
          .distinct
          .aggrelongatelon(Aggrelongator.min) // thelon most reloncelonnt velonrsion is thelon smallelonst nelongativelon valuelon
    }

    val uttelonntityReloncordsSinglelonVelonrsion: TypelondPipelon[UttelonntityReloncord] =
      uttelonntityReloncords
        .filtelonrWithValuelon(uttVelonrsionToUselon) {
          caselon (uttelonntityReloncord: UttelonntityReloncord, uttVelonrsionOpt: Option[Long]) =>
            uttVelonrsionOpt.contains(uttelonntityReloncord.velonrsion)
        }

    uttelonntityReloncordsSinglelonVelonrsion.flatMap { uttelonntityReloncord: UttelonntityReloncord =>
      val localizelondUselonrs: Selonq[LocalizelondUselonr] =
        uttelonntityReloncord.knownForUselonrs.flatMap(_.localizelondUselonrs).gelontOrelonlselon(Nil)

      val validLocalizelondUselonrs: Selonq[(TopicId, Languagelon, UselonrId)] =
        localizelondUselonrs
          .flatMap {
            caselon LocalizelondUselonr(uselonrId: UselonrId, Somelon(Localelon(Somelon(languagelon: String), _)), _) =>
              Somelon((uttelonntityReloncord.elonntityId, languagelon, uselonrId))
            caselon _ =>
              Nonelon
          }

      val localelonProducelonrSelonelondIds: Selonq[((TopicId, Languagelon), Selonq[UselonrId])] = validLocalizelondUselonrs
        .groupBy {
          caselon (topicId: TopicId, languagelon: Languagelon, _) =>
            (topicId, languagelon)
        }
        .mapValuelons(_.map(_._3).distinct) // valuelons arelon distinct producelonrIds
        .toSelonq

      localelonProducelonrSelonelondIds.forelonach { // stats
        caselon (_, selonelondIds: Selonq[UselonrId]) =>
          topicLangPairCount.inc()
          if (selonelondIds.iselonmpty) topicLangPairCountelonmptySelonelond.inc()
          if (selonelondIds.lelonngth <= 1) topicLangPairCountLtelonOnelonSelonelond.inc()
          if (selonelondIds.lelonngth <= 5) topicLangPairCountLtelonFivelonSelonelonds.inc()
          if (selonelondIds.lelonngth <= 10) topicLangPairCountLtelonTelonnSelonelonds.inc()
      }

      localelonProducelonrSelonelondIds
    }.forcelonToDisk
  }

  delonf uttelonntitielonsSourcelon(
    customFullMelontadataSourcelon: Option[TypelondPipelon[FullMelontadata]] = Nonelon
  )(
    implicit datelonRangelon: DatelonRangelon,
    timelonZonelon: TimelonZonelon
  ): TypelondPipelon[Long] = {
    customFullMelontadataSourcelon
      .gelontOrelonlselon(fullMelontadataSourcelon)
      .flatMap {
        caselon fullMelontadata if fullMelontadata.domainId == UTTDomain =>
          for {
            basicMelontadata <- fullMelontadata.basicMelontadata
            indelonxablelonFielonlds <- basicMelontadata.indelonxablelonFielonlds
            tags <- indelonxablelonFielonlds.tags
            if !SelonmanticCorelonFiltelonrs.shouldFiltelonrByTags(tags.toSelont, DataselontConstants.stopTags)
          } yielonld {
            fullMelontadata.elonntityId
          }
        caselon _ => Nonelon
      }
  }

  // Gelont followablelon topics from elonschelonrbird
  delonf uttFollowablelonelonntitielonsSourcelon(
    implicit datelonRangelon: DatelonRangelon,
    timelonZonelon: TimelonZonelon,
    uniquelonID: UniquelonID
  ): TypelondPipelon[Long] = {
    val followablelonelonntityCount = Stat("followablelon_elonntitielons_count")
    val FollowablelonTag = "utt:followablelon_topic"
    fullMelontadataSourcelon
      .flatMap {
        caselon fullMelontadata if fullMelontadata.domainId == UTTDomain =>
          for {
            basicMelontadata <- fullMelontadata.basicMelontadata
            indelonxablelonFielonlds <- basicMelontadata.indelonxablelonFielonlds
            tags <- indelonxablelonFielonlds.tags
            if tags.contains(FollowablelonTag)
          } yielonld {
            followablelonelonntityCount.inc()
            fullMelontadata.elonntityId
          }
        caselon _ => Nonelon
      }
  }

  delonf fullMelontadataSourcelon(
    implicit datelonRangelon: DatelonRangelon,
    timelonZonelon: TimelonZonelon
  ): TypelondPipelon[FullMelontadata] = {
    TypelondPipelon
      .from(
        nelonw FullMelontadataSourcelon(s"/atla/proc/${FullMelontadataSourcelon.DelonfaultHdfsPath}")()(
          datelonRangelon.elonmbiggelonn(Days(7))))
  }

  delonf uselonrSourcelon(implicit timelonZonelon: TimelonZonelon): TypelondPipelon[(UselonrId, (Country, Languagelon))] =
    DAL
      .relonadMostReloncelonntSnapshotNoOldelonrThan(UselonrsourcelonFlatScalaDataselont, Days(7))
      .withRelonmotelonRelonadPolicy(elonxplicitLocation(ProcAtla))
      .withColumns(uselonrsourcelonColumns)
      .toTypelondPipelon.flatMap { flatUselonr =>
        for {
          uselonrId <- flatUselonr.id
          country <- flatUselonr.accountCountryCodelon
          languagelon <- flatUselonr.languagelon
          standardLang <- gelontStandardLanguagelonCodelon(languagelon)
        } yielonld {
          (uselonrId, country.toUppelonrCaselon, standardLang)
        }
      }.distinct
      .map { caselon (uselonr, country, lang) => uselonr -> (country, lang) }

  // Build uselonr languagelon sourcelon from infelonrrelond languagelons (pelonnguin_uselonr_languagelons dataselont)
  delonf infelonrrelondUselonrConsumelondLanguagelonSourcelon(
    implicit timelonZonelon: TimelonZonelon
  ): TypelondPipelon[(UselonrId, Selonq[(Languagelon, Doublelon)])] = {
    DAL
      .relonadMostReloncelonntSnapshotNoOldelonrThan(PelonnguinUselonrLanguagelonsScalaDataselont, Days(7))
      .withRelonmotelonRelonadPolicy(elonxplicitLocation(ProcAtla))
      .toTypelondPipelon
      .map { kv =>
        val consumelond = kv.valuelon.consumelond
          .collelonct {
            caselon scorelondString if scorelondString.welonight > 0.001 => //throw away 5% outlielonrs
              (gelontStandardLanguagelonCodelon(scorelondString.itelonm), scorelondString.welonight)
          }.collelonct {
            caselon (Somelon(languagelon), scorelon) => (languagelon, scorelon)
          }
        (kv.kelony, consumelond)
      }
  }

  delonf infelonrrelondUselonrProducelondLanguagelonSourcelon(
    implicit timelonZonelon: TimelonZonelon
  ): TypelondPipelon[(UselonrId, Selonq[(Languagelon, Doublelon)])] = {
    DAL
      .relonadMostReloncelonntSnapshotNoOldelonrThan(PelonnguinUselonrLanguagelonsScalaDataselont, Days(7))
      .withRelonmotelonRelonadPolicy(elonxplicitLocation(ProcAtla))
      .toTypelondPipelon
      .map { kv =>
        val producelond = kv.valuelon.producelond
          .collelonct {
            caselon scorelondString if scorelondString.welonight > 0.15 => //throw away 5% outlielonrs
              (gelontStandardLanguagelonCodelon(scorelondString.itelonm), scorelondString.welonight)
          }.collelonct {
            caselon (Somelon(languagelon), scorelon) => (languagelon, scorelon)
          }
        (kv.kelony, producelond)
      }
  }

  delonf simClustelonrsIntelonrelonstInSourcelon(
    implicit datelonRangelon: DatelonRangelon,
    timelonZonelon: TimelonZonelon
  ): TypelondPipelon[KelonyVal[UselonrId, ClustelonrsUselonrIsIntelonrelonstelondIn]] = {
    DAL
      .relonadMostReloncelonntSnapshotNoOldelonrThan(
        SimclustelonrsV2IntelonrelonstelondIn20M145KUpdatelondScalaDataselont,
        Days(30))
      .withRelonmotelonRelonadPolicy(elonxplicitLocation(ProcAtla))
      .toTypelondPipelon
  }

  delonf simClustelonrsIntelonrelonstInLogFavSourcelon(
    minLogFavScorelon: Doublelon
  )(
    implicit datelonRangelon: DatelonRangelon,
    timelonZonelon: TimelonZonelon
  ): TypelondPipelon[(UselonrId, Map[ClustelonrId, Doublelon])] = {
    simClustelonrsIntelonrelonstInSourcelon.map {
      caselon KelonyVal(uselonrId, clustelonrsUselonrIsIntelonrelonstelondIn) =>
        uselonrId -> clustelonrsUselonrIsIntelonrelonstelondIn.clustelonrIdToScorelons
          .map {
            caselon (clustelonrId, scorelons) =>
              clustelonrId -> scorelons.logFavScorelon.gelontOrelonlselon(0.0)
          }
          .filtelonr(_._2 > minLogFavScorelon)
          .toMap
    }
  }

  delonf topicFollowGraphSourcelon(
    implicit datelonRangelon: DatelonRangelon,
    timelonZonelon: TimelonZonelon,
    uniquelonID: UniquelonID
  ): TypelondPipelon[(TopicId, UselonrId)] = {
    val uselonrTopicFollowCount = Stat("uselonr_topic_follow_count")
    DAL
      .relonadMostReloncelonntSnapshotNoOldelonrThan(UselonrTopicRelonlationSnapshotScalaDataselont, Days(7))
      .withRelonmotelonRelonadPolicy(elonxplicitLocation(ProcAtla))
      .toTypelondPipelon
      .collelonct {
        caselon uselonrIntelonrelonstsRelonlationSnapshot: UselonrIntelonrelonstsRelonlationSnapshot
            if uselonrIntelonrelonstsRelonlationSnapshot.intelonrelonstTypelon == "UTT" &&
              uselonrIntelonrelonstsRelonlationSnapshot.relonlation == IntelonrelonstRelonlationTypelon.Followelond =>
          (uselonrIntelonrelonstsRelonlationSnapshot.intelonrelonstId, uselonrIntelonrelonstsRelonlationSnapshot.uselonrId)
      }
      .hashJoin(uttFollowablelonelonntitielonsSourcelon.asKelonys)
      .map {
        caselon (topic, (uselonr, _)) =>
          uselonrTopicFollowCount.inc()
          (topic, uselonr)
      }
  }

  delonf notIntelonrelonstelondTopicsSourcelon(
    implicit datelonRangelon: DatelonRangelon,
    timelonZonelon: TimelonZonelon,
    uniquelonID: UniquelonID
  ): TypelondPipelon[(TopicId, UselonrId)] = {
    val uselonrNotIntelonrelonstelondInTopicsCount = Stat("uselonr_not_intelonrelonstelond_in_topics_count")
    DAL
      .relonadMostReloncelonntSnapshotNoOldelonrThan(
        UselonrIntelonrelonstRelonlationSnapshotScalaDataselont,
        Days(7)).withRelonmotelonRelonadPolicy(elonxplicitLocation(ProcAtla)).toTypelondPipelon.collelonct {
        caselon uselonrIntelonrelonstsRelonlationSnapshot: UselonrIntelonrelonstsRelonlationSnapshot
            if uselonrIntelonrelonstsRelonlationSnapshot.intelonrelonstTypelon == "UTT" &&
              uselonrIntelonrelonstsRelonlationSnapshot.relonlation == IntelonrelonstRelonlationTypelon.NotIntelonrelonstelond =>
          (uselonrIntelonrelonstsRelonlationSnapshot.intelonrelonstId, uselonrIntelonrelonstsRelonlationSnapshot.uselonrId)
      }
      .hashJoin(uttFollowablelonelonntitielonsSourcelon.asKelonys)
      .map {
        caselon (topic, (uselonr, _)) =>
          uselonrNotIntelonrelonstelondInTopicsCount.inc()
          (topic, uselonr)
      }
  }

  delonf twelonelontSourcelon(
    implicit datelonRangelon: DatelonRangelon
  ): TypelondPipelon[UnhydratelondTwelonelont] = {
    DAL
      .relonad(UnhydratelondScalaDataselont, datelonRangelon).withRelonmotelonRelonadPolicy(elonxplicitLocation(ProcAtla))
      .toTypelondPipelon
  }

  delonf flatTwelonelontsSourcelon(
    implicit datelonRangelon: DatelonRangelon
  ): TypelondPipelon[UnhydratelondFlatTwelonelont] = {
    DAL
      .relonad(UnhydratelondFlatScalaDataselont, datelonRangelon)
      .withRelonmotelonRelonadPolicy(elonxplicitLocation(ProcAtla))
      .toTypelondPipelon
  }

  delonf uselonrTwelonelontFavoritelonsSourcelon(
    implicit datelonRangelon: DatelonRangelon
  ): TypelondPipelon[(UselonrId, TwelonelontId, Timelonstamp)] = {
    DAL
      .relonad(TimelonlinelonSelonrvicelonFavoritelonsScalaDataselont, datelonRangelon)
      .withRelonmotelonRelonadPolicy(elonxplicitLocation(ProcAtla))
      .toTypelondPipelon
      .flatMap { cfelon: ContelonxtualizelondFavoritelonelonvelonnt =>
        cfelon.elonvelonnt match {
          caselon FavoritelonelonvelonntUnion.Favoritelon(fav) =>
            Somelon(fav.uselonrId, fav.twelonelontId, fav.elonvelonntTimelonMs)
          caselon _ =>
            Nonelon
        }
      }
  }

  delonf uselonrTwelonelontImprelonssionsSourcelon(
    dwelonllSelonc: Int = 1
  )(
    implicit datelonRangelon: DatelonRangelon
  ): TypelondPipelon[(UselonrId, TwelonelontId, Timelonstamp)] = {
    DAL
      .relonad(UselonrIntelonractionScalaDataselont, datelonRangelon)
      .withRelonmotelonRelonadPolicy(AllowCrossClustelonrSamelonDC)
      .toTypelondPipelon
      .flatMap {
        caselon uselonrIntelonraction
            if uselonrIntelonraction.intelonractionTypelon == IntelonractionTypelon.TwelonelontImprelonssions =>
          uselonrIntelonraction.intelonractionDelontails match {
            caselon IntelonractionDelontails.TwelonelontImprelonssionDelontails(
                  TwelonelontImprelonssionDelontails(twelonelontId, _, dwelonllTimelonInSeloncOpt))
                if dwelonllTimelonInSeloncOpt.elonxists(_ >= dwelonllSelonc) =>
              Somelon(uselonrIntelonraction.uselonrId, twelonelontId, uselonrIntelonraction.timelonStamp)
            caselon _ =>
              Nonelon
          }
        caselon _ => Nonelon
      }
  }

  delonf transformFavelondgelons(
    input: TypelondPipelon[elondgelonWithDeloncayelondWelonights],
    halfLifelonInDaysForFavScorelon: Int
  )(
    implicit uniquelonID: UniquelonID
  ): TypelondPipelon[(Long, Long, Doublelon)] = {
    val numelondgelonsWithSpeloncifielondHalfLifelon = Stat(
      s"num_elondgelons_with_speloncifielond_half_lifelon_${halfLifelonInDaysForFavScorelon}_days")
    val numelondgelonsWithoutSpeloncifielondHalfLifelon = Stat(
      s"num_elondgelons_without_speloncifielond_half_lifelon_${halfLifelonInDaysForFavScorelon}_days")
    input
      .flatMap { elondgelon =>
        if (elondgelon.welonights.halfLifelonInDaysToDeloncayelondSums.contains(halfLifelonInDaysForFavScorelon)) {
          numelondgelonsWithSpeloncifielondHalfLifelon.inc()
          Somelon((elondgelon.sourcelonId, elondgelon.delonstinationId, elondgelon.welonights.halfLifelonInDaysToDeloncayelondSums(100)))
        } elonlselon {
          numelondgelonsWithoutSpeloncifielondHalfLifelon.inc()
          Nonelon
        }
      }
  }

  delonf gelontFavelondgelons(
    halfLifelonInDaysForFavScorelon: Int
  )(
    implicit datelonRangelon: DatelonRangelon,
    uniquelonID: UniquelonID
  ): TypelondPipelon[(Long, Long, Doublelon)] = {
    implicit val tz: java.util.TimelonZonelon = DatelonOps.UTC
    transformFavelondgelons(
      DAL
        .relonadMostReloncelonntSnapshotNoOldelonrThan(UselonrUselonrFavGraphScalaDataselont, Days(14))
        .withRelonmotelonRelonadPolicy(elonxplicitLocation(ProcAtla))
        .toTypelondPipelon,
      halfLifelonInDaysForFavScorelon
    )
  }

  delonf flockRelonportAsSpamSourcelon(
  )(
    implicit datelonRangelon: DatelonRangelon
  ): TypelondPipelon[(UselonrId, UselonrId)] = {
    DAL
      .relonadMostReloncelonntSnapshot(FlockRelonportAsSpamelondgelonsScalaDataselont)
      .toTypelondPipelon
      .collelonct {
        caselon elondgelon if elondgelon.statelon == ValidFlockelondgelonStatelonId =>
          (elondgelon.sourcelonId, elondgelon.delonstinationId)
      }
  }

  delonf flockBlocksSourcelon(
  )(
    implicit datelonRangelon: DatelonRangelon
  ): TypelondPipelon[(UselonrId, UselonrId)] = {
    DAL
      .relonadMostReloncelonntSnapshot(FlockBlockselondgelonsScalaDataselont)
      .toTypelondPipelon
      .collelonct {
        caselon elondgelon if elondgelon.statelon == ValidFlockelondgelonStatelonId =>
          (elondgelon.sourcelonId, elondgelon.delonstinationId)
      }
  }

  delonf flockFollowsSourcelon(
  )(
    implicit datelonRangelon: DatelonRangelon
  ): TypelondPipelon[(UselonrId, UselonrId)] = {
    DAL
      .relonadMostReloncelonntSnapshot(FlockFollowselondgelonsScalaDataselont)
      .toTypelondPipelon
      .collelonct {
        caselon elondgelon if elondgelon.statelon == ValidFlockelondgelonStatelonId =>
          (elondgelon.sourcelonId, elondgelon.delonstinationId)
      }
  }

  delonf flockRelonportAsAbuselonSourcelon(
  )(
    implicit datelonRangelon: DatelonRangelon
  ): TypelondPipelon[(UselonrId, UselonrId)] = {
    DAL
      .relonadMostReloncelonntSnapshot(FlockRelonportAsAbuselonelondgelonsScalaDataselont)
      .toTypelondPipelon
      .collelonct {
        caselon elondgelon if elondgelon.statelon == ValidFlockelondgelonStatelonId =>
          (elondgelon.sourcelonId, elondgelon.delonstinationId)
      }
  }

  delonf magicReloncsNotficationOpelonnOrClickelonvelonntsSourcelon(
    implicit datelonRangelon: DatelonRangelon
  ): TypelondPipelon[MagicReloncsNotificationLitelon] = {
    DAL
      .relonad(MagicreloncsNotificationLitelon1DayLagScalaDataselont, datelonRangelon)
      .toTypelondPipelon
      .filtelonr { elonntry =>
        // kelonelonp elonntrielons with a valid uselonrId and twelonelontId, opelonnelond or clickelond timelonstamp delonfinelond
        val uselonrIdelonxists = elonntry.targelontUselonrId.isDelonfinelond
        val twelonelontIdelonxists = elonntry.twelonelontId.isDelonfinelond
        val opelonnOrClickelonxists =
          elonntry.opelonnTimelonstampMs.isDelonfinelond || elonntry.ntabClickTimelonstampMs.isDelonfinelond
        uselonrIdelonxists && twelonelontIdelonxists && opelonnOrClickelonxists
      }
  }

  delonf ielonSourcelonTwelonelontelonngagelonmelonntsSourcelon(implicit datelonRangelon: DatelonRangelon): TypelondPipelon[Intelonractionelonvelonnt] = {
    DAL
      .relonad(
        com.twittelonr.ielonsourcelon.procelonssing.elonvelonnts.batch.SelonrvelonrelonngagelonmelonntsScalaDataselont,
        datelonRangelon).withColumns(
        Selont("targelontId", "targelontTypelon", "elonngagingUselonrId", "delontails", "relonfelonrelonncelonTwelonelont"))
      .toTypelondPipelon
      .filtelonr { elonvelonnt =>
        // filtelonr out loggelond out uselonrs beloncauselon thelonir favoritelons arelon lelonss relonliablelon
        elonvelonnt.elonngagingUselonrId > 0L && elonvelonnt.targelontTypelon == IntelonractionTargelontTypelon.Twelonelont
      }
  }

  privatelon delonf uselonrIdFromBlelonndelonrAdaptivelonScribelonLog(
    blelonndelonrAdaptivelonLog: AdaptivelonSelonarchScribelonLog
  ): Option[Long] = {
    blelonndelonrAdaptivelonLog.velonrsionelondCommonHelonadelonr match {
      caselon VelonrsionelondCommonHelonadelonr.CommonHelonadelonr(CommonHelonadelonr.SelonrvelonrHelonadelonr(selonrvelonrHelonadelonr)) =>
        selonrvelonrHelonadelonr.relonquelonstInfo match {
          caselon Somelon(relonquelonstInfo) => relonquelonstInfo.ids.gelont(IdTypelon.UselonrId).map(_.toLong)
          caselon _ => Nonelon
        }
      caselon _ => Nonelon
    }
  }

  delonf adaptivelonSelonarchScribelonLogsSourcelon(
    implicit datelonRangelon: DatelonRangelon
  ): TypelondPipelon[(UselonrId, String)] = {
    val selonarchData: TypelondPipelon[AdaptivelonSelonarchScribelonLog] =
      DAL
        .relonad(AdaptivelonSelonarchScalaDataselont, datelonRangelon).toTypelondPipelon

    selonarchData
      .flatMap({ scribelonLog: AdaptivelonSelonarchScribelonLog =>
        for {
          uselonrId <- uselonrIdFromBlelonndelonrAdaptivelonScribelonLog(scribelonLog)
          // filtelonr out loggelond out selonarch quelonrielons
          if uselonrId != 0
          quelonryString <- scribelonLog.relonquelonstLog.flatMap(_.relonquelonst).flatMap(_.rawQuelonry)
        } yielonld {
          (uselonrId, Selont(quelonryString))
        }
      })
      // if a uselonr selonarchelons for thelon samelon quelonry multiplelon timelons, thelonrelon could belon duplicatelons.
      // Delon-dup thelonm to gelont thelon distinct quelonrielons selonarchelond by a uselonr
      .sumByKelony
      .flatMap {
        caselon (uselonrId, distinctQuelonrySelont) =>
          distinctQuelonrySelont.map { quelonry =>
            (uselonrId, quelonry)
          }
      }
  }
}
