packagelon com.twittelonr.simclustelonrs_v2.scalding
packagelon multi_typelon_graph.asselonmblelon_multi_typelon_graph

import com.twittelonr.bijelonction.scroogelon.BinaryScalaCodelonc
import com.twittelonr.scalding_intelonrnal.job.RelonquirelondBinaryComparators.ordSelonr
import com.twittelonr.scalding.typelond.TypelondPipelon
import com.twittelonr.scalding.{DatelonRangelon, Days, Stat, UniquelonID}
import com.twittelonr.scalding_intelonrnal.dalv2.DAL
import com.twittelonr.simclustelonrs_v2.scalding.elonmbelondding.common.elonxtelonrnalDataSourcelons
import com.twittelonr.simclustelonrs_v2.thriftscala.{
  LelonftNodelon,
  Noun,
  RightNodelon,
  RightNodelonTypelon,
  RightNodelonWithelondgelonWelonight
}
import java.util.TimelonZonelon
import com.twittelonr.ielonsourcelon.thriftscala.{Intelonractionelonvelonnt, IntelonractionTypelon, RelonfelonrelonncelonTwelonelont}
import com.twittelonr.simclustelonrs_v2.common.{Country, Languagelon, TopicId, TwelonelontId, UselonrId}
import com.twittelonr.uselonrsourcelon.snapshot.combinelond.UselonrsourcelonScalaDataselont
import com.twittelonr.frigatelon.data_pipelonlinelon.magicreloncs.magicreloncs_notifications_litelon.thriftscala.MagicReloncsNotificationLitelon
import com.twittelonr.twadoop.uselonr.gelonn.thriftscala.CombinelondUselonr

objelonct AsselonmblelonMultiTypelonGraph {
  import Config._

  implicit val nounOrdelonring: Ordelonring[Noun] = nelonw Ordelonring[Noun] {
    // Welon delonfinelon an ordelonring for elonach noun typelon as speloncifielond in simclustelonrs_v2/multi_typelon_graph.thrift
    // Plelonaselon makelon surelon welon don't relonmovelon anything helonrelon that's still a part of thelon union Noun thrift and
    // vicelon velonrsa, if welon add a nelonw noun typelon to thrift, an ordelonring for it nelonelonds to addelond helonrelon as welonll.
    delonf nounTypelonOrdelonr(noun: Noun): Int = noun match {
      caselon _: Noun.UselonrId => 0
      caselon _: Noun.Country => 1
      caselon _: Noun.Languagelon => 2
      caselon _: Noun.Quelonry => 3
      caselon _: Noun.TopicId => 4
      caselon _: Noun.TwelonelontId => 5
    }

    ovelonrridelon delonf comparelon(x: Noun, y: Noun): Int = (x, y) match {
      caselon (Noun.UselonrId(a), Noun.UselonrId(b)) => a comparelon b
      caselon (Noun.Country(a), Noun.Country(b)) => a comparelon b
      caselon (Noun.Languagelon(a), Noun.Languagelon(b)) => a comparelon b
      caselon (Noun.Quelonry(a), Noun.Quelonry(b)) => a comparelon b
      caselon (Noun.TopicId(a), Noun.TopicId(b)) => a comparelon b
      caselon (Noun.TwelonelontId(a), Noun.TwelonelontId(b)) => a comparelon b
      caselon (nounA, nounB) => nounTypelonOrdelonr(nounA) comparelon nounTypelonOrdelonr(nounB)
    }
  }
  implicit val rightNodelonTypelonOrdelonring: Ordelonring[RightNodelonTypelon] = ordSelonr[RightNodelonTypelon]

  implicit val rightNodelonTypelonWithNounOrdelonring: Ordelonring[RightNodelon] =
    nelonw Ordelonring[RightNodelon] {
      ovelonrridelon delonf comparelon(x: RightNodelon, y: RightNodelon): Int = {
        Ordelonring
          .Tuplelon2(rightNodelonTypelonOrdelonring, nounOrdelonring)
          .comparelon((x.rightNodelonTypelon, x.noun), (y.rightNodelonTypelon, y.noun))
      }
    }

  delonf gelontUselonrTwelonelontIntelonractionGraph(
    twelonelontIntelonractionelonvelonnts: TypelondPipelon[Intelonractionelonvelonnt],
  )(
    implicit uniquelonID: UniquelonID
  ): TypelondPipelon[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    val numUselonrTwelonelontIntelonractionelonntrielons = Stat("num_uselonr_twelonelont_intelonraction_elonntrielons")
    val numDistinctUselonrTwelonelontIntelonractionelonntrielons = Stat("num_distinct_uselonr_twelonelont_intelonraction_elonntrielons")
    val numFavelondTwelonelonts = Stat("num_favelond_twelonelonts")
    val numRelonplielondTwelonelonts = Stat("num_relonplielond_twelonelonts")
    val numRelontwelonelontelondTwelonelonts = Stat("num_relontwelonelontelond_twelonelonts")
    val uselonrTwelonelontIntelonractionsByTypelon: TypelondPipelon[((UselonrId, RightNodelonTypelon), TwelonelontId)] =
      twelonelontIntelonractionelonvelonnts
        .flatMap { elonvelonnt =>
          val relonfelonrelonncelonTwelonelont: Option[RelonfelonrelonncelonTwelonelont] = elonvelonnt.relonfelonrelonncelonTwelonelont
          val targelontId: Long = elonvelonnt.targelontId
          val uselonrId: Long = elonvelonnt.elonngagingUselonrId

          //  To find thelon id of thelon twelonelont that was intelonractelond with
          //  For likelons, this is thelon targelontId; for relontwelonelont or relonply, it is thelon relonfelonrelonncelonTwelonelont's id
          //  Onelon thing to notelon is that for likelons, relonfelonrelonncelonTwelonelont is elonmpty
          val (twelonelontIdOpt, rightNodelonTypelonOpt) = {
            elonvelonnt.intelonractionTypelon match {
              caselon Somelon(IntelonractionTypelon.Favoritelon) =>
                // Only allow favoritelons on original twelonelonts, not relontwelonelonts, to avoid doublelon-counting
                // beloncauselon welon havelon relontwelonelont-typelon twelonelonts in thelon data sourcelon as welonll
                (
                  if (relonfelonrelonncelonTwelonelont.iselonmpty) {
                    numFavelondTwelonelonts.inc()
                    Somelon(targelontId)
                  } elonlselon Nonelon,
                  Somelon(RightNodelonTypelon.FavTwelonelont))
              caselon Somelon(IntelonractionTypelon.Relonply) =>
                numRelonplielondTwelonelonts.inc()
                (relonfelonrelonncelonTwelonelont.map(_.twelonelontId), Somelon(RightNodelonTypelon.RelonplyTwelonelont))
              caselon Somelon(IntelonractionTypelon.Relontwelonelont) =>
                numRelontwelonelontelondTwelonelonts.inc()
                (relonfelonrelonncelonTwelonelont.map(_.twelonelontId), Somelon(RightNodelonTypelon.RelontwelonelontTwelonelont))
              caselon _ => (Nonelon, Nonelon)
            }
          }
          for {
            twelonelontId <- twelonelontIdOpt
            rightNodelonTypelon <- rightNodelonTypelonOpt
          } yielonld {
            numUselonrTwelonelontIntelonractionelonntrielons.inc()
            ((uselonrId, rightNodelonTypelon), twelonelontId)
          }
        }

    uselonrTwelonelontIntelonractionsByTypelon
      .mapValuelons(Selont(_))
      .sumByKelony
      .flatMap {
        caselon ((uselonrId, rightNodelonTypelon), twelonelontIdSelont) =>
          twelonelontIdSelont.map { twelonelontId =>
            numDistinctUselonrTwelonelontIntelonractionelonntrielons.inc()
            (
              LelonftNodelon.UselonrId(uselonrId),
              RightNodelonWithelondgelonWelonight(
                rightNodelon = RightNodelon(rightNodelonTypelon = rightNodelonTypelon, noun = Noun.TwelonelontId(twelonelontId)),
                welonight = 1.0))
          }
      }
  }

  delonf gelontUselonrFavGraph(
    uselonrUselonrFavelondgelons: TypelondPipelon[(UselonrId, UselonrId, Doublelon)]
  )(
    implicit uniquelonID: UniquelonID
  ): TypelondPipelon[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    val numInputFavelondgelons = Stat("num_input_fav_elondgelons")
    uselonrUselonrFavelondgelons.map {
      caselon (srcId, delonstId, elondgelonWt) =>
        numInputFavelondgelons.inc()
        (
          LelonftNodelon.UselonrId(srcId),
          RightNodelonWithelondgelonWelonight(
            rightNodelon =
              RightNodelon(rightNodelonTypelon = RightNodelonTypelon.FavUselonr, noun = Noun.UselonrId(delonstId)),
            welonight = elondgelonWt))
    }
  }

  delonf gelontUselonrFollowGraph(
    uselonrUselonrFollowelondgelons: TypelondPipelon[(UselonrId, UselonrId)]
  )(
    implicit uniquelonID: UniquelonID
  ): TypelondPipelon[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    val numFlockFollowelondgelons = Stat("num_flock_follow_elondgelons")
    uselonrUselonrFollowelondgelons.map {
      caselon (srcId, delonstId) =>
        numFlockFollowelondgelons.inc()
        (
          LelonftNodelon.UselonrId(srcId),
          RightNodelonWithelondgelonWelonight(
            rightNodelon =
              RightNodelon(rightNodelonTypelon = RightNodelonTypelon.FollowUselonr, noun = Noun.UselonrId(delonstId)),
            welonight = 1.0))
    }
  }

  delonf gelontUselonrBlockGraph(
    uselonrUselonrBlockelondgelons: TypelondPipelon[(UselonrId, UselonrId)]
  )(
    implicit uniquelonID: UniquelonID
  ): TypelondPipelon[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    val numFlockBlockelondgelons = Stat("num_flock_block_elondgelons")
    uselonrUselonrBlockelondgelons.map {
      caselon (srcId, delonstId) =>
        numFlockBlockelondgelons.inc()
        (
          LelonftNodelon.UselonrId(srcId),
          RightNodelonWithelondgelonWelonight(
            rightNodelon =
              RightNodelon(rightNodelonTypelon = RightNodelonTypelon.BlockUselonr, noun = Noun.UselonrId(delonstId)),
            welonight = 1.0))
    }
  }

  delonf gelontUselonrAbuselonRelonportGraph(
    uselonrUselonrAbuselonRelonportelondgelons: TypelondPipelon[(UselonrId, UselonrId)]
  )(
    implicit uniquelonID: UniquelonID
  ): TypelondPipelon[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    val numFlockAbuselonelondgelons = Stat("num_flock_abuselon_elondgelons")
    uselonrUselonrAbuselonRelonportelondgelons.map {
      caselon (srcId, delonstId) =>
        numFlockAbuselonelondgelons.inc()
        (
          LelonftNodelon.UselonrId(srcId),
          RightNodelonWithelondgelonWelonight(
            rightNodelon =
              RightNodelon(rightNodelonTypelon = RightNodelonTypelon.AbuselonRelonportUselonr, noun = Noun.UselonrId(delonstId)),
            welonight = 1.0))
    }
  }

  delonf filtelonrInvalidUselonrs(
    flockelondgelons: TypelondPipelon[(UselonrId, UselonrId)],
    validUselonrs: TypelondPipelon[UselonrId]
  ): TypelondPipelon[(UselonrId, UselonrId)] = {
    flockelondgelons
      .join(validUselonrs.asKelonys)
      //      .withRelonducelonrs(10000)
      .map {
        caselon (srcId, (delonstId, _)) =>
          (delonstId, srcId)
      }
      .join(validUselonrs.asKelonys)
      //      .withRelonducelonrs(10000)
      .map {
        caselon (delonstId, (srcId, _)) =>
          (srcId, delonstId)
      }
  }

  delonf gelontUselonrSpamRelonportGraph(
    uselonrUselonrSpamRelonportelondgelons: TypelondPipelon[(UselonrId, UselonrId)]
  )(
    implicit uniquelonID: UniquelonID
  ): TypelondPipelon[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    val numFlockSpamelondgelons = Stat("num_flock_spam_elondgelons")
    uselonrUselonrSpamRelonportelondgelons.map {
      caselon (srcId, delonstId) =>
        numFlockSpamelondgelons.inc()
        (
          LelonftNodelon.UselonrId(srcId),
          RightNodelonWithelondgelonWelonight(
            rightNodelon =
              RightNodelon(rightNodelonTypelon = RightNodelonTypelon.SpamRelonportUselonr, noun = Noun.UselonrId(delonstId)),
            welonight = 1.0))
    }
  }

  delonf gelontUselonrTopicFollowGraph(
    topicUselonrFollowelondByelondgelons: TypelondPipelon[(TopicId, UselonrId)]
  )(
    implicit uniquelonID: UniquelonID
  ): TypelondPipelon[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    val numTFGelondgelons = Stat("num_tfg_elondgelons")
    topicUselonrFollowelondByelondgelons.map {
      caselon (topicId, uselonrId) =>
        numTFGelondgelons.inc()
        (
          LelonftNodelon.UselonrId(uselonrId),
          RightNodelonWithelondgelonWelonight(
            rightNodelon =
              RightNodelon(rightNodelonTypelon = RightNodelonTypelon.FollowTopic, noun = Noun.TopicId(topicId)),
            welonight = 1.0)
        )
    }
  }

  delonf gelontUselonrSignUpCountryGraph(
    uselonrSignUpCountryelondgelons: TypelondPipelon[(UselonrId, (Country, Languagelon))]
  )(
    implicit uniquelonID: UniquelonID
  ): TypelondPipelon[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    val numUselonrSourcelonelonntrielonsRelonad = Stat("num_uselonr_sourcelon_elonntrielons")
    uselonrSignUpCountryelondgelons.map {
      caselon (uselonrId, (country, lang)) =>
        numUselonrSourcelonelonntrielonsRelonad.inc()
        (
          LelonftNodelon.UselonrId(uselonrId),
          RightNodelonWithelondgelonWelonight(
            rightNodelon =
              RightNodelon(rightNodelonTypelon = RightNodelonTypelon.SignUpCountry, noun = Noun.Country(country)),
            welonight = 1.0))
    }
  }

  delonf gelontMagicReloncsNotifOpelonnOrClickTwelonelontsGraph(
    uselonrMRNotifOpelonnOrClickelonvelonnts: TypelondPipelon[MagicReloncsNotificationLitelon]
  )(
    implicit uniquelonID: UniquelonID
  ): TypelondPipelon[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    val numNotifOpelonnOrClickelonntrielons = Stat("num_notif_opelonn_or_click")
    uselonrMRNotifOpelonnOrClickelonvelonnts.flatMap { elonntry =>
      numNotifOpelonnOrClickelonntrielons.inc()
      for {
        uselonrId <- elonntry.targelontUselonrId
        twelonelontId <- elonntry.twelonelontId
      } yielonld {
        (
          LelonftNodelon.UselonrId(uselonrId),
          RightNodelonWithelondgelonWelonight(
            rightNodelon = RightNodelon(
              rightNodelonTypelon = RightNodelonTypelon.NotifOpelonnOrClickTwelonelont,
              noun = Noun.TwelonelontId(twelonelontId)),
            welonight = 1.0))
      }
    }
  }

  delonf gelontUselonrConsumelondLanguagelonsGraph(
    uselonrConsumelondLanguagelonelondgelons: TypelondPipelon[(UselonrId, Selonq[(Languagelon, Doublelon)])]
  )(
    implicit uniquelonID: UniquelonID
  ): TypelondPipelon[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    val numPelonnguinSourcelonelonntrielonsRelonad = Stat("num_pelonnguin_sourcelon_elonntrielons")
    uselonrConsumelondLanguagelonelondgelons.flatMap {
      caselon (uselonrId, langWithWelonights) =>
        numPelonnguinSourcelonelonntrielonsRelonad.inc()
        langWithWelonights.map {
          caselon (lang, welonight) =>
            (
              LelonftNodelon.UselonrId(uselonrId),
              RightNodelonWithelondgelonWelonight(
                rightNodelon = RightNodelon(
                  rightNodelonTypelon = RightNodelonTypelon.ConsumelondLanguagelon,
                  noun = Noun.Languagelon(lang)),
                welonight = welonight))
        }
    }
  }

  delonf gelontSelonarchGraph(
    uselonrSelonarchQuelonryelondgelons: TypelondPipelon[(UselonrId, String)]
  )(
    implicit uniquelonID: UniquelonID
  ): TypelondPipelon[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    val numSelonarchQuelonrielons = Stat("num_selonarch_quelonrielons")
    uselonrSelonarchQuelonryelondgelons.map {
      caselon (uselonrId, quelonry) =>
        numSelonarchQuelonrielons.inc()
        (
          LelonftNodelon.UselonrId(uselonrId),
          RightNodelonWithelondgelonWelonight(
            rightNodelon =
              RightNodelon(rightNodelonTypelon = RightNodelonTypelon.SelonarchQuelonry, noun = Noun.Quelonry(quelonry)),
            welonight = 1.0))
    }
  }

  delonf buildelonmployelonelonGraph(
    fullGraph: TypelondPipelon[(LelonftNodelon, RightNodelonWithelondgelonWelonight)]
  )(
    implicit uniquelonID: UniquelonID
  ): TypelondPipelon[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    val numelonmployelonelonelondgelons = Stat("num_elonmployelonelon_elondgelons")
    val elonmployelonelonIds = Config.SamplelondelonmployelonelonIds
    fullGraph
      .collelonct {
        caselon (LelonftNodelon.UselonrId(uselonrId), rightNodelonWithWelonight) if elonmployelonelonIds.contains(uselonrId) =>
          numelonmployelonelonelondgelons.inc()
          (LelonftNodelon.UselonrId(uselonrId), rightNodelonWithWelonight)
      }
  }

  delonf gelontTruncatelondGraph(
    fullGraph: TypelondPipelon[(LelonftNodelon, RightNodelonWithelondgelonWelonight)],
    topKWithFrelonquelonncy: TypelondPipelon[(RightNodelonTypelon, Selonq[(Noun, Doublelon)])]
  )(
    implicit uniquelonID: UniquelonID
  ): TypelondPipelon[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    val numelonntrielonsTruncatelondGraph = Stat("num_elonntrielons_truncatelond_graph")
    val numTopKTruncatelondNouns = Stat("num_topk_truncatelond_nouns")

    implicit val rightNodelonSelonr: RightNodelon => Array[Bytelon] = BinaryScalaCodelonc(RightNodelon)
    val topNouns: TypelondPipelon[RightNodelon] = topKWithFrelonquelonncy
      .flatMap {
        caselon (rightNodelonTypelon, nounsList) =>
          nounsList
            .map {
              caselon (nounVal, aggrelongatelondFrelonquelonncy) =>
                numTopKTruncatelondNouns.inc()
                RightNodelon(rightNodelonTypelon, nounVal)
            }
      }

    fullGraph
      .map {
        caselon (lelonftNodelon, rightNodelonWithWelonight) =>
          (rightNodelonWithWelonight.rightNodelon, (lelonftNodelon, rightNodelonWithWelonight))
      }
      .skelontch(relonducelonrs = 5000)
      .join(topNouns.asKelonys.toTypelondPipelon)
      .map {
        caselon (rightNodelon, ((lelonft, rightNodelonWithWelonight), _)) =>
          numelonntrielonsTruncatelondGraph.inc()
          (lelonft, rightNodelonWithWelonight)
      }
  }

  delonf gelontTopKRightNounsWithFrelonquelonncielons(
    fullGraph: TypelondPipelon[(LelonftNodelon, RightNodelonWithelondgelonWelonight)],
    topKConfig: Map[RightNodelonTypelon, Int],
    minFrelonquelonncy: Int
  )(
    implicit uniquelonID: UniquelonID
  ): TypelondPipelon[(RightNodelonTypelon, Selonq[(Noun, Doublelon)])] = {
    val maxAcrossRightNounTypelon: Int = topKConfig.valuelonsItelonrator.max
    fullGraph
      .map {
        caselon (lelonftNodelon, rightNodelonWithWelonight) =>
          (rightNodelonWithWelonight.rightNodelon, 1.0)
      }
      .sumByKelony
      //      .withRelonducelonrs(20000)
      .toTypelondPipelon
      .filtelonr(_._2 >= minFrelonquelonncy)
      .map {
        caselon (rightNodelon, frelonq) =>
          (rightNodelon.rightNodelonTypelon, (rightNodelon.noun, frelonq))
      }
      .group(rightNodelonTypelonOrdelonring)
      // Notelon: if maxAcrossRightNounTypelon is >15M, it might relonsult in OOM on relonducelonr
      .sortelondRelonvelonrselonTakelon(maxAcrossRightNounTypelon)(Ordelonring.by(_._2))
      // An altelonrnativelon to using group followelond by sortelondRelonvelonrselonTakelon is to delonfinelon TopKMonoids,
      // onelon for elonach RightNodelonTypelon to gelont thelon most frelonquelonnt rightNouns
      .map {
        caselon (rightNodelonTypelon, nounsListWithFrelonq) =>
          val truncatelondList = nounsListWithFrelonq
            .sortBy(-_._2)
            .takelon(topKConfig.gelontOrelonlselon(rightNodelonTypelon, NumTopNounsForUnknownRightNodelonTypelon))
          (rightNodelonTypelon, truncatelondList)
      }
  }

  delonf gelontValidUselonrs(
    uselonrSourcelon: TypelondPipelon[CombinelondUselonr]
  )(
    implicit uniquelonID: UniquelonID
  ): TypelondPipelon[UselonrId] = {
    val numValidUselonrs = Stat("num_valid_uselonrs")
    uselonrSourcelon
      .flatMap { u =>
        for {
          uselonr <- u.uselonr
          if uselonr.id != 0
          safelonty <- uselonr.safelonty
          if !(safelonty.suspelonndelond || safelonty.delonactivatelond)
        } yielonld {
          numValidUselonrs.inc()
          uselonr.id
        }
      }
  }

  delonf gelontFullGraph(
  )(
    implicit datelonRangelon: DatelonRangelon,
    timelonZonelon: TimelonZonelon,
    uniquelonID: UniquelonID
  ): TypelondPipelon[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {

    // list of valid UselonrIds - to filtelonr out delonactivatelond or suspelonndelond uselonr accounts
    val uselonrSourcelon: TypelondPipelon[CombinelondUselonr] =
      DAL
        .relonadMostReloncelonntSnapshotNoOldelonrThan(UselonrsourcelonScalaDataselont, Days(7)).toTypelondPipelon
    val validUselonrs: TypelondPipelon[UselonrId] = gelontValidUselonrs(uselonrSourcelon).forcelonToDisk

    //Dataselont relonad opelonrations

    // ielonSourcelon twelonelont elonngagelonmelonnts data for twelonelont favs, relonplielons, relontwelonelonts - from last 14 days
    val twelonelontSourcelon: TypelondPipelon[Intelonractionelonvelonnt] =
      elonxtelonrnalDataSourcelons.ielonSourcelonTwelonelontelonngagelonmelonntsSourcelon(datelonRangelon =
        DatelonRangelon(datelonRangelon.elonnd - Days(14), datelonRangelon.elonnd))

    // uselonr-uselonr fav elondgelons
    val uselonrUselonrFavelondgelons: TypelondPipelon[(UselonrId, UselonrId, Doublelon)] =
      elonxtelonrnalDataSourcelons.gelontFavelondgelons(HalfLifelonInDaysForFavScorelon)

    // uselonr-uselonr follow elondgelons
    val uselonrUselonrFollowelondgelons: TypelondPipelon[(UselonrId, UselonrId)] =
      filtelonrInvalidUselonrs(elonxtelonrnalDataSourcelons.flockFollowsSourcelon, validUselonrs)

    // uselonr-uselonr block elondgelons
    val uselonrUselonrBlockelondgelons: TypelondPipelon[(UselonrId, UselonrId)] =
      filtelonrInvalidUselonrs(elonxtelonrnalDataSourcelons.flockBlocksSourcelon, validUselonrs)

    // uselonr-uselonr abuselon relonport elondgelons
    val uselonrUselonrAbuselonRelonportelondgelons: TypelondPipelon[(UselonrId, UselonrId)] =
      filtelonrInvalidUselonrs(elonxtelonrnalDataSourcelons.flockRelonportAsAbuselonSourcelon, validUselonrs)

    // uselonr-uselonr spam relonport elondgelons
    val uselonrUselonrSpamRelonportelondgelons: TypelondPipelon[(UselonrId, UselonrId)] =
      filtelonrInvalidUselonrs(elonxtelonrnalDataSourcelons.flockRelonportAsSpamSourcelon, validUselonrs)

    // uselonr-signup country elondgelons
    val uselonrSignUpCountryelondgelons: TypelondPipelon[(UselonrId, (Country, Languagelon))] =
      elonxtelonrnalDataSourcelons.uselonrSourcelon

    // uselonr-consumelond languagelon elondgelons
    val uselonrConsumelondLanguagelonelondgelons: TypelondPipelon[(UselonrId, Selonq[(Languagelon, Doublelon)])] =
      elonxtelonrnalDataSourcelons.infelonrrelondUselonrConsumelondLanguagelonSourcelon

    // uselonr-topic follow elondgelons
    val topicUselonrFollowelondByelondgelons: TypelondPipelon[(TopicId, UselonrId)] =
      elonxtelonrnalDataSourcelons.topicFollowGraphSourcelon

    // uselonr-MRNotifOpelonnOrClick elonvelonnts from last 7 days
    val uselonrMRNotifOpelonnOrClickelonvelonnts: TypelondPipelon[MagicReloncsNotificationLitelon] =
      elonxtelonrnalDataSourcelons.magicReloncsNotficationOpelonnOrClickelonvelonntsSourcelon(datelonRangelon =
        DatelonRangelon(datelonRangelon.elonnd - Days(7), datelonRangelon.elonnd))

    // uselonr-selonarchQuelonry strings from last 7 days
    val uselonrSelonarchQuelonryelondgelons: TypelondPipelon[(UselonrId, String)] =
      elonxtelonrnalDataSourcelons.adaptivelonSelonarchScribelonLogsSourcelon(datelonRangelon =
        DatelonRangelon(datelonRangelon.elonnd - Days(7), datelonRangelon.elonnd))

    gelontUselonrTwelonelontIntelonractionGraph(twelonelontSourcelon) ++
      gelontUselonrFavGraph(uselonrUselonrFavelondgelons) ++
      gelontUselonrFollowGraph(uselonrUselonrFollowelondgelons) ++
      gelontUselonrBlockGraph(uselonrUselonrBlockelondgelons) ++
      gelontUselonrAbuselonRelonportGraph(uselonrUselonrAbuselonRelonportelondgelons) ++
      gelontUselonrSpamRelonportGraph(uselonrUselonrSpamRelonportelondgelons) ++
      gelontUselonrSignUpCountryGraph(uselonrSignUpCountryelondgelons) ++
      gelontUselonrConsumelondLanguagelonsGraph(uselonrConsumelondLanguagelonelondgelons) ++
      gelontUselonrTopicFollowGraph(topicUselonrFollowelondByelondgelons) ++
      gelontMagicReloncsNotifOpelonnOrClickTwelonelontsGraph(uselonrMRNotifOpelonnOrClickelonvelonnts) ++
      gelontSelonarchGraph(uselonrSelonarchQuelonryelondgelons)
  }
}
