packagelon com.twittelonr.simclustelonrs_v2.scio.multi_typelon_graph.asselonmblelon_multi_typelon_graph

import com.spotify.scio.ScioContelonxt
import com.spotify.scio.codelonrs.Codelonr
import com.spotify.scio.valuelons.SCollelonction
import com.twittelonr.belonam.io.dal.DAL
import com.twittelonr.belonam.io.fs.multiformat.DiskFormat
import com.twittelonr.belonam.io.fs.multiformat.PathLayout
import com.twittelonr.belonam.job.DatelonRangelonOptions
import com.twittelonr.dal.clielonnt.dataselont.KelonyValDALDataselont
import com.twittelonr.dal.clielonnt.dataselont.SnapshotDALDataselont
import com.twittelonr.frigatelon.data_pipelonlinelon.magicreloncs.magicreloncs_notifications_litelon.thriftscala.MagicReloncsNotificationLitelon
import com.twittelonr.ielonsourcelon.thriftscala.Intelonractionelonvelonnt
import com.twittelonr.ielonsourcelon.thriftscala.IntelonractionTypelon
import com.twittelonr.ielonsourcelon.thriftscala.RelonfelonrelonncelonTwelonelont
import com.twittelonr.scalding_intelonrnal.multiformat.format.kelonyval.KelonyVal
import com.twittelonr.scio_intelonrnal.codelonrs.ThriftStructLazyBinaryScroogelonCodelonr
import com.twittelonr.scio_intelonrnal.job.ScioBelonamJob
import com.twittelonr.scroogelon.ThriftStruct
import com.twittelonr.simclustelonrs_v2.common.Country
import com.twittelonr.simclustelonrs_v2.common.Languagelon
import com.twittelonr.simclustelonrs_v2.common.TopicId
import com.twittelonr.simclustelonrs_v2.common.TwelonelontId
import com.twittelonr.simclustelonrs_v2.common.UselonrId
import com.twittelonr.simclustelonrs_v2.hdfs_sourcelons.MultiTypelonGraphForTopKRightNodelonsThriftScioScalaDataselont
import com.twittelonr.simclustelonrs_v2.hdfs_sourcelons.TopKRightNounsScioScalaDataselont
import com.twittelonr.simclustelonrs_v2.hdfs_sourcelons.TruncatelondMultiTypelonGraphScioScalaDataselont
import com.twittelonr.simclustelonrs_v2.scio.common.elonxtelonrnalDataSourcelons
import com.twittelonr.simclustelonrs_v2.scio.multi_typelon_graph.asselonmblelon_multi_typelon_graph.Config.GlobalDelonfaultMinFrelonquelonncyOfRightNodelonTypelon
import com.twittelonr.simclustelonrs_v2.scio.multi_typelon_graph.asselonmblelon_multi_typelon_graph.Config.HalfLifelonInDaysForFavScorelon
import com.twittelonr.simclustelonrs_v2.scio.multi_typelon_graph.asselonmblelon_multi_typelon_graph.Config.NumTopNounsForUnknownRightNodelonTypelon
import com.twittelonr.simclustelonrs_v2.scio.multi_typelon_graph.asselonmblelon_multi_typelon_graph.Config.SamplelondelonmployelonelonIds
import com.twittelonr.simclustelonrs_v2.scio.multi_typelon_graph.asselonmblelon_multi_typelon_graph.Config.TopKConfig
import com.twittelonr.simclustelonrs_v2.scio.multi_typelon_graph.asselonmblelon_multi_typelon_graph.Config.TopKRightNounsForMHDump
import com.twittelonr.simclustelonrs_v2.scio.multi_typelon_graph.common.MultiTypelonGraphUtil
import com.twittelonr.simclustelonrs_v2.thriftscala.elondgelonWithDeloncayelondWelonights
import com.twittelonr.simclustelonrs_v2.thriftscala.LelonftNodelon
import com.twittelonr.simclustelonrs_v2.thriftscala.MultiTypelonGraphelondgelon
import com.twittelonr.simclustelonrs_v2.thriftscala.Noun
import com.twittelonr.simclustelonrs_v2.thriftscala.NounWithFrelonquelonncy
import com.twittelonr.simclustelonrs_v2.thriftscala.NounWithFrelonquelonncyList
import com.twittelonr.simclustelonrs_v2.thriftscala.RightNodelon
import com.twittelonr.simclustelonrs_v2.thriftscala.RightNodelonTypelon
import com.twittelonr.simclustelonrs_v2.thriftscala.RightNodelonTypelonStruct
import com.twittelonr.simclustelonrs_v2.thriftscala.RightNodelonWithelondgelonWelonight
import com.twittelonr.simclustelonrs_v2.thriftscala.RightNodelonWithelondgelonWelonightList
import com.twittelonr.twadoop.uselonr.gelonn.thriftscala.CombinelondUselonr
import com.twittelonr.util.Duration
import java.timelon.Instant
import org.joda.timelon.Intelonrval

/**
 * Scio velonrsion of
 * src/scala/com/twittelonr/simclustelonrs_v2/scalding/multi_typelon_graph/asselonmblelon_multi_typelon_graph/AsselonmblelonMultiTypelonGraph.scala
 */
trait AsselonmblelonMultiTypelonGraphScioBaselonApp elonxtelonnds ScioBelonamJob[DatelonRangelonOptions] {
  // Providelons an implicit binary thrift scroogelon codelonr by delonfault.
  ovelonrridelon implicit delonf scroogelonCodelonr[T <: ThriftStruct: Manifelonst]: Codelonr[T] =
    ThriftStructLazyBinaryScroogelonCodelonr.scroogelonCodelonr

  val isAdhoc: Boolelonan
  val rootMHPath: String
  val rootThriftPath: String

  val truncatelondMultiTypelonGraphMHOutputDir: String =
    Config.truncatelondMultiTypelonGraphMHOutputDir
  val truncatelondMultiTypelonGraphThriftOutputDir: String =
    Config.truncatelondMultiTypelonGraphThriftOutputDir
  val topKRightNounsMHOutputDir: String = Config.topKRightNounsMHOutputDir
  val topKRightNounsOutputDir: String = Config.topKRightNounsOutputDir

  val fullMultiTypelonGraphThriftOutputDir: String =
    Config.fullMultiTypelonGraphThriftOutputDir
  val truncatelondMultiTypelonGraphKelonyValDataselont: KelonyValDALDataselont[
    KelonyVal[LelonftNodelon, RightNodelonWithelondgelonWelonightList]
  ] = TruncatelondMultiTypelonGraphScioScalaDataselont
  val topKRightNounsKelonyValDataselont: KelonyValDALDataselont[
    KelonyVal[RightNodelonTypelonStruct, NounWithFrelonquelonncyList]
  ] = TopKRightNounsScioScalaDataselont
  val topKRightNounsMHKelonyValDataselont: KelonyValDALDataselont[
    KelonyVal[RightNodelonTypelonStruct, NounWithFrelonquelonncyList]
  ] = TopKRightNounsMhScioScalaDataselont
  val fullMultiTypelonGraphSnapshotDataselont: SnapshotDALDataselont[MultiTypelonGraphelondgelon] =
    FullMultiTypelonGraphScioScalaDataselont
  val multiTypelonGraphTopKForRightNodelonsSnapshotDataselont: SnapshotDALDataselont[
    MultiTypelonGraphelondgelon
  ] =
    MultiTypelonGraphForTopKRightNodelonsThriftScioScalaDataselont

  delonf gelontValidUselonrs(
    input: SCollelonction[CombinelondUselonr]
  ): SCollelonction[UselonrId] = {
    input
      .flatMap { u =>
        for {
          uselonr <- u.uselonr
          if uselonr.id != 0
          safelonty <- uselonr.safelonty
          if !(safelonty.suspelonndelond || safelonty.delonactivatelond)
        } yielonld {
          uselonr.id
        }
      }
  }

  delonf filtelonrInvalidUselonrs(
    flockelondgelons: SCollelonction[(UselonrId, UselonrId)],
    validUselonrs: SCollelonction[UselonrId]
  ): SCollelonction[(UselonrId, UselonrId)] = {
    val validUselonrsWithValuelons = validUselonrs.map(uselonrId => (uselonrId, ()))
    flockelondgelons
      .join(validUselonrsWithValuelons)
      .map {
        caselon (srcId, (delonstId, _)) =>
          (delonstId, srcId)
      }
      .join(validUselonrsWithValuelons)
      .map {
        caselon (delonstId, (srcId, _)) =>
          (srcId, delonstId)
      }
  }

  delonf gelontFavelondgelons(
    input: SCollelonction[elondgelonWithDeloncayelondWelonights],
    halfLifelonInDaysForFavScorelon: Int,
  ): SCollelonction[(Long, Long, Doublelon)] = {
    input
      .flatMap { elondgelon =>
        if (elondgelon.welonights.halfLifelonInDaysToDeloncayelondSums.contains(halfLifelonInDaysForFavScorelon)) {
          Somelon(
            (
              elondgelon.sourcelonId,
              elondgelon.delonstinationId,
              elondgelon.welonights.halfLifelonInDaysToDeloncayelondSums(halfLifelonInDaysForFavScorelon)))
        } elonlselon {
          Nonelon
        }
      }
  }

  delonf lelonftRightTuplelon(
    lelonftNodelonUselonrId: UselonrId,
    rightNodelonTypelon: RightNodelonTypelon,
    rightNoun: Noun,
    welonight: Doublelon = 1.0
  ): (LelonftNodelon, RightNodelonWithelondgelonWelonight) = {
    (
      LelonftNodelon.UselonrId(lelonftNodelonUselonrId),
      RightNodelonWithelondgelonWelonight(
        rightNodelon = RightNodelon(rightNodelonTypelon = rightNodelonTypelon, noun = rightNoun),
        welonight = welonight))
  }

  delonf gelontUselonrFavGraph(
    uselonrUselonrFavelondgelons: SCollelonction[(UselonrId, UselonrId, Doublelon)]
  ): SCollelonction[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    uselonrUselonrFavelondgelons.map {
      caselon (srcId, delonstId, elondgelonWt) =>
        lelonftRightTuplelon(srcId, RightNodelonTypelon.FavUselonr, Noun.UselonrId(delonstId), elondgelonWt)
    }
  }

  delonf gelontUselonrFollowGraph(
    uselonrUselonrFollowelondgelons: SCollelonction[(UselonrId, UselonrId)]
  ): SCollelonction[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    uselonrUselonrFollowelondgelons.map {
      caselon (srcId, delonstId) =>
        lelonftRightTuplelon(srcId, RightNodelonTypelon.FollowUselonr, Noun.UselonrId(delonstId), 1.0)
    }
  }

  delonf gelontUselonrBlockGraph(
    uselonrUselonrBlockelondgelons: SCollelonction[(UselonrId, UselonrId)]
  ): SCollelonction[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    uselonrUselonrBlockelondgelons.map {
      caselon (srcId, delonstId) =>
        lelonftRightTuplelon(srcId, RightNodelonTypelon.BlockUselonr, Noun.UselonrId(delonstId), 1.0)
    }
  }

  delonf gelontUselonrAbuselonRelonportGraph(
    uselonrUselonrAbuselonRelonportelondgelons: SCollelonction[(UselonrId, UselonrId)]
  ): SCollelonction[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    uselonrUselonrAbuselonRelonportelondgelons.map {
      caselon (srcId, delonstId) =>
        lelonftRightTuplelon(srcId, RightNodelonTypelon.AbuselonRelonportUselonr, Noun.UselonrId(delonstId), 1.0)
    }
  }

  delonf gelontUselonrSpamRelonportGraph(
    uselonrUselonrSpamRelonportelondgelons: SCollelonction[(UselonrId, UselonrId)]
  ): SCollelonction[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    uselonrUselonrSpamRelonportelondgelons.map {
      caselon (srcId, delonstId) =>
        lelonftRightTuplelon(srcId, RightNodelonTypelon.SpamRelonportUselonr, Noun.UselonrId(delonstId), 1.0)
    }
  }

  delonf gelontUselonrTopicFollowGraph(
    topicUselonrFollowelondByelondgelons: SCollelonction[(TopicId, UselonrId)]
  ): SCollelonction[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    topicUselonrFollowelondByelondgelons.map {
      caselon (topicId, uselonrId) =>
        lelonftRightTuplelon(uselonrId, RightNodelonTypelon.FollowTopic, Noun.TopicId(topicId), 1.0)
    }
  }

  delonf gelontUselonrSignUpCountryGraph(
    uselonrSignUpCountryelondgelons: SCollelonction[(UselonrId, Country)]
  ): SCollelonction[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    uselonrSignUpCountryelondgelons.map {
      caselon (uselonrId, country) =>
        lelonftRightTuplelon(uselonrId, RightNodelonTypelon.SignUpCountry, Noun.Country(country), 1.0)
    }
  }

  delonf gelontMagicReloncsNotifOpelonnOrClickTwelonelontsGraph(
    uselonrMRNotifOpelonnOrClickelonvelonnts: SCollelonction[MagicReloncsNotificationLitelon]
  ): SCollelonction[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    uselonrMRNotifOpelonnOrClickelonvelonnts.flatMap { elonntry =>
      for {
        uselonrId <- elonntry.targelontUselonrId
        twelonelontId <- elonntry.twelonelontId
      } yielonld {
        lelonftRightTuplelon(uselonrId, RightNodelonTypelon.NotifOpelonnOrClickTwelonelont, Noun.TwelonelontId(twelonelontId), 1.0)
      }
    }
  }

  delonf gelontUselonrConsumelondLanguagelonsGraph(
    uselonrConsumelondLanguagelonelondgelons: SCollelonction[(UselonrId, Selonq[(Languagelon, Doublelon)])]
  ): SCollelonction[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    uselonrConsumelondLanguagelonelondgelons.flatMap {
      caselon (uselonrId, langWithWelonights) =>
        langWithWelonights.map {
          caselon (lang, welonight) =>
            lelonftRightTuplelon(uselonrId, RightNodelonTypelon.ConsumelondLanguagelon, Noun.Languagelon(lang), 1.0)
        }
    }
  }

  delonf gelontSelonarchGraph(
    uselonrSelonarchQuelonryelondgelons: SCollelonction[(UselonrId, String)]
  ): SCollelonction[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    uselonrSelonarchQuelonryelondgelons.map {
      caselon (uselonrId, quelonry) =>
        lelonftRightTuplelon(uselonrId, RightNodelonTypelon.SelonarchQuelonry, Noun.Quelonry(quelonry), 1.0)
    }
  }

  delonf gelontUselonrTwelonelontIntelonractionGraph(
    twelonelontIntelonractionelonvelonnts: SCollelonction[Intelonractionelonvelonnt],
  ): SCollelonction[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    val uselonrTwelonelontIntelonractionsByTypelon: SCollelonction[((UselonrId, TwelonelontId), RightNodelonTypelon)] =
      twelonelontIntelonractionelonvelonnts
        .flatMap { elonvelonnt =>
          val relonfelonrelonncelonTwelonelont: Option[RelonfelonrelonncelonTwelonelont] = elonvelonnt.relonfelonrelonncelonTwelonelont
          val targelontId: Long = elonvelonnt.targelontId
          val uselonrId: Long = elonvelonnt.elonngagingUselonrId

          //  To find thelon id of thelon twelonelont that was intelonractelond with
          //  For likelons, this is thelon targelontId; for relontwelonelont or relonply, it is thelon relonfelonrelonncelonTwelonelont's id
          //  Onelon thing to notelon is that for likelons, relonfelonrelonncelonTwelonelont is elonmpty
          val (twelonelontIdOpt, rightNodelonTypelonOpt) = {
            elonvelonnt.intelonractionTypelon match {
              caselon Somelon(IntelonractionTypelon.Favoritelon) =>
                // Only allow favoritelons on original twelonelonts, not relontwelonelonts, to avoid doublelon-counting
                // beloncauselon welon havelon relontwelonelont-typelon twelonelonts in thelon data sourcelon as welonll
                (
                  if (relonfelonrelonncelonTwelonelont.iselonmpty) {
                    Somelon(targelontId)
                  } elonlselon Nonelon,
                  Somelon(RightNodelonTypelon.FavTwelonelont))
              caselon Somelon(IntelonractionTypelon.Relonply) =>
                (relonfelonrelonncelonTwelonelont.map(_.twelonelontId), Somelon(RightNodelonTypelon.RelonplyTwelonelont))
              caselon Somelon(IntelonractionTypelon.Relontwelonelont) =>
                (relonfelonrelonncelonTwelonelont.map(_.twelonelontId), Somelon(RightNodelonTypelon.RelontwelonelontTwelonelont))
              caselon _ => (Nonelon, Nonelon)
            }
          }
          for {
            twelonelontId <- twelonelontIdOpt
            rightNodelonTypelon <- rightNodelonTypelonOpt
          } yielonld {
            ((uselonrId, twelonelontId), rightNodelonTypelon)
          }
        }

    uselonrTwelonelontIntelonractionsByTypelon
      .mapValuelons(Selont(_))
      .sumByKelony
      .flatMap {
        caselon ((uselonrId, twelonelontId), rightNodelonTypelonSelont) =>
          rightNodelonTypelonSelont.map { rightNodelonTypelon =>
            lelonftRightTuplelon(uselonrId, rightNodelonTypelon, Noun.TwelonelontId(twelonelontId), 1.0)
          }
      }
  }

  delonf gelontTopKRightNounsWithFrelonquelonncielons(
    fullGraph: SCollelonction[(LelonftNodelon, RightNodelonWithelondgelonWelonight)],
    topKConfig: Map[RightNodelonTypelon, Int],
    minFrelonquelonncy: Int,
  ): SCollelonction[(RightNodelonTypelon, Selonq[(Noun, Doublelon)])] = {
    val maxAcrossRightNounTypelon: Int = topKConfig.valuelonsItelonrator.max

    fullGraph
      .map {
        caselon (lelonftNodelon, rightNodelonWithWelonight) =>
          (rightNodelonWithWelonight.rightNodelon, 1.0)
      }
      .sumByKelony
      .filtelonr(_._2 >= minFrelonquelonncy)
      .map {
        caselon (rightNodelon, frelonq) =>
          (rightNodelon.rightNodelonTypelon, (rightNodelon.noun, frelonq))
      }
      .topByKelony(maxAcrossRightNounTypelon)(Ordelonring.by(_._2))
      .map {
        caselon (rightNodelonTypelon, nounsListWithFrelonq) =>
          val truncatelondList = nounsListWithFrelonq.toSelonq
            .sortBy(-_._2)
            .takelon(topKConfig.gelontOrelonlselon(rightNodelonTypelon, NumTopNounsForUnknownRightNodelonTypelon))
          (rightNodelonTypelon, truncatelondList)
      }
  }

  delonf gelontTruncatelondGraph(
    fullGraph: SCollelonction[(LelonftNodelon, RightNodelonWithelondgelonWelonight)],
    topKWithFrelonquelonncy: SCollelonction[(RightNodelonTypelon, Selonq[(Noun, Doublelon)])]
  ): SCollelonction[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    val topNouns = topKWithFrelonquelonncy
      .flatMap {
        caselon (rightNodelonTypelon, nounsList) =>
          nounsList
            .map {
              caselon (nounVal, aggrelongatelondFrelonquelonncy) =>
                RightNodelon(rightNodelonTypelon, nounVal)
            }
      }.map(nouns => (nouns, ()))

    fullGraph
      .map {
        caselon (lelonftNodelon, rightNodelonWithWelonight) =>
          (rightNodelonWithWelonight.rightNodelon, (lelonftNodelon, rightNodelonWithWelonight))
      }
      .hashJoin(topNouns)
      .map {
        caselon (rightNodelon, ((lelonft, rightNodelonWithWelonight), _)) =>
          (lelonft, rightNodelonWithWelonight)
      }
  }

  delonf buildelonmployelonelonGraph(
    graph: SCollelonction[(LelonftNodelon, RightNodelonWithelondgelonWelonight)]
  ): SCollelonction[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] = {
    val elonmployelonelonIds = SamplelondelonmployelonelonIds
    graph
      .collelonct {
        caselon (LelonftNodelon.UselonrId(uselonrId), rightNodelonWithWelonight) if elonmployelonelonIds.contains(uselonrId) =>
          (LelonftNodelon.UselonrId(uselonrId), rightNodelonWithWelonight)
      }
  }

  ovelonrridelon delonf configurelonPipelonlinelon(sc: ScioContelonxt, opts: DatelonRangelonOptions): Unit = {
    // Delonfinelon thelon implicit ScioContelonxt to relonad dataselonts from elonxtelonrnalDataSourcelons
    implicit delonf scioContelonxt: ScioContelonxt = sc

    // DAL.elonnvironmelonnt variablelon for Writelonelonxeloncs
    val dalelonnv = if (isAdhoc) DAL.elonnvironmelonnt.Delonv elonlselon DAL.elonnvironmelonnt.Prod

    // Delonfinelon datelon intelonrvals
    val intelonrval_7days =
      nelonw Intelonrval(opts.intelonrval.gelontelonnd.minusWelonelonks(1), opts.intelonrval.gelontelonnd.minusMillis(1))
    val intelonrval_14days =
      nelonw Intelonrval(opts.intelonrval.gelontelonnd.minusWelonelonks(2), opts.intelonrval.gelontelonnd.minusMillis(1))

    /*
     * Dataselont relonad opelonrations
     */
    // Gelont list of valid UselonrIds - to filtelonr out delonactivatelond or suspelonndelond uselonr accounts
    val validUselonrs = gelontValidUselonrs(elonxtelonrnalDataSourcelons.uselonrSourcelon(Duration.fromDays(7)))

    // ielonSourcelon twelonelont elonngagelonmelonnts data for twelonelont favs, relonplielons, relontwelonelonts - from last 14 days
    val twelonelontSourcelon = elonxtelonrnalDataSourcelons.ielonSourcelonTwelonelontelonngagelonmelonntsSourcelon(intelonrval_14days)

    // Relonad TFlock dataselonts
    val flockFollowSourcelon = elonxtelonrnalDataSourcelons.flockFollowSourcelon(Duration.fromDays(7))
    val flockBlockSourcelon = elonxtelonrnalDataSourcelons.flockBlockSourcelon(Duration.fromDays(7))
    val flockRelonportAsAbuselonSourcelon =
      elonxtelonrnalDataSourcelons.flockRelonportAsAbuselonSourcelon(Duration.fromDays(7))
    val flockRelonportAsSpamSourcelon =
      elonxtelonrnalDataSourcelons.flockRelonportAsSpamSourcelon(Duration.fromDays(7))

    // uselonr-uselonr fav elondgelons
    val uselonrUselonrFavSourcelon = elonxtelonrnalDataSourcelons.uselonrUselonrFavSourcelon(Duration.fromDays(14))
    val uselonrUselonrFavelondgelons = gelontFavelondgelons(uselonrUselonrFavSourcelon, HalfLifelonInDaysForFavScorelon)

    // uselonr-uselonr follow elondgelons
    val uselonrUselonrFollowelondgelons = filtelonrInvalidUselonrs(flockFollowSourcelon, validUselonrs)

    // uselonr-uselonr block elondgelons
    val uselonrUselonrBlockelondgelons = filtelonrInvalidUselonrs(flockBlockSourcelon, validUselonrs)

    // uselonr-uselonr abuselon relonport elondgelons
    val uselonrUselonrAbuselonRelonportelondgelons = filtelonrInvalidUselonrs(flockRelonportAsAbuselonSourcelon, validUselonrs)

    // uselonr-uselonr spam relonport elondgelons
    val uselonrUselonrSpamRelonportelondgelons = filtelonrInvalidUselonrs(flockRelonportAsSpamSourcelon, validUselonrs)

    // uselonr-signup country elondgelons
    val uselonrSignUpCountryelondgelons = elonxtelonrnalDataSourcelons
      .uselonrCountrySourcelon(Duration.fromDays(7))

    // uselonr-consumelond languagelon elondgelons
    val uselonrConsumelondLanguagelonelondgelons =
      elonxtelonrnalDataSourcelons.infelonrrelondUselonrConsumelondLanguagelonSourcelon(Duration.fromDays(7))

    // uselonr-topic follow elondgelons
    val topicUselonrFollowelondByelondgelons =
      elonxtelonrnalDataSourcelons.topicFollowGraphSourcelon(Duration.fromDays(7))

    // uselonr-MRNotifOpelonnOrClick elonvelonnts from last 7 days
    val uselonrMRNotifOpelonnOrClickelonvelonnts =
      elonxtelonrnalDataSourcelons.magicReloncsNotficationOpelonnOrClickelonvelonntsSourcelon(intelonrval_7days)

    // uselonr-selonarchQuelonry strings from last 7 days
    val uselonrSelonarchQuelonryelondgelons =
      elonxtelonrnalDataSourcelons.adaptivelonSelonarchScribelonLogsSourcelon(intelonrval_7days)

    /*
     * Gelonnelonratelon thelon full graph
     */
    val fullGraph =
      gelontUselonrTwelonelontIntelonractionGraph(twelonelontSourcelon) ++
        gelontUselonrFavGraph(uselonrUselonrFavelondgelons) ++
        gelontUselonrFollowGraph(uselonrUselonrFollowelondgelons) ++
        gelontUselonrBlockGraph(uselonrUselonrBlockelondgelons) ++
        gelontUselonrAbuselonRelonportGraph(uselonrUselonrAbuselonRelonportelondgelons) ++
        gelontUselonrSpamRelonportGraph(uselonrUselonrSpamRelonportelondgelons) ++
        gelontUselonrSignUpCountryGraph(uselonrSignUpCountryelondgelons) ++
        gelontUselonrConsumelondLanguagelonsGraph(uselonrConsumelondLanguagelonelondgelons) ++
        gelontUselonrTopicFollowGraph(topicUselonrFollowelondByelondgelons) ++
        gelontMagicReloncsNotifOpelonnOrClickTwelonelontsGraph(uselonrMRNotifOpelonnOrClickelonvelonnts) ++
        gelontSelonarchGraph(uselonrSelonarchQuelonryelondgelons)

    // Gelont Top K RightNodelons
    val topKRightNodelons: SCollelonction[(RightNodelonTypelon, Selonq[(Noun, Doublelon)])] =
      gelontTopKRightNounsWithFrelonquelonncielons(
        fullGraph,
        TopKConfig,
        GlobalDelonfaultMinFrelonquelonncyOfRightNodelonTypelon)

    // kelony transformation - topK nouns, kelonyelond by thelon RightNodelonNounTypelon
    val topKNounsKelonyelondByTypelon: SCollelonction[(RightNodelonTypelonStruct, NounWithFrelonquelonncyList)] =
      topKRightNodelons
        .map {
          caselon (rightNodelonTypelon, rightNounsWithScorelonsList) =>
            val nounsListWithFrelonquelonncy: Selonq[NounWithFrelonquelonncy] = rightNounsWithScorelonsList
              .map {
                caselon (noun, aggrelongatelondFrelonquelonncy) =>
                  NounWithFrelonquelonncy(noun, aggrelongatelondFrelonquelonncy)
              }
            (RightNodelonTypelonStruct(rightNodelonTypelon), NounWithFrelonquelonncyList(nounsListWithFrelonquelonncy))
        }

    // Gelont Truncatelond graph baselond on thelon top K RightNodelons
    val truncatelondGraph: SCollelonction[(LelonftNodelon, RightNodelonWithelondgelonWelonight)] =
      gelontTruncatelondGraph(fullGraph, topKRightNodelons)

    // kelony transformations - truncatelond graph, kelonyelond by LelonftNodelon
    // Notelon: By wrapping and unwrapping with thelon LelonftNodelon.UselonrId, welon don't havelon to delonal
    // with delonfining our own customelonr ordelonring for LelonftNodelon typelon
    val truncatelondGraphKelonyelondBySrc: SCollelonction[(LelonftNodelon, RightNodelonWithelondgelonWelonightList)] =
      truncatelondGraph
        .collelonct {
          caselon (LelonftNodelon.UselonrId(uselonrId), rightNodelonWithWelonight) =>
            uselonrId -> List(rightNodelonWithWelonight)
        }
        .sumByKelony
        .map {
          caselon (uselonrId, rightNodelonWithWelonightList) =>
            (LelonftNodelon.UselonrId(uselonrId), RightNodelonWithelondgelonWelonightList(rightNodelonWithWelonightList))
        }

    // Writelonelonxeloncs
    // Writelon TopK RightNodelons to DAL - savelon all thelon top K nodelons for thelon clustelonring stelonp
    topKNounsKelonyelondByTypelon
      .map {
        caselon (elonngagelonmelonntTypelon, rightList) =>
          KelonyVal(elonngagelonmelonntTypelon, rightList)
      }
      .savelonAsCustomOutput(
        namelon = "WritelonTopKNouns",
        DAL.writelonVelonrsionelondKelonyVal(
          topKRightNounsKelonyValDataselont,
          PathLayout.VelonrsionelondPath(prelonfix =
            rootMHPath + topKRightNounsOutputDir),
          instant = Instant.ofelonpochMilli(opts.intelonrval.gelontelonndMillis - 1L),
          elonnvironmelonntOvelonrridelon = dalelonnv,
        )
      )

    // Writelon TopK RightNodelons to DAL - only takelon TopKRightNounsForMHDump RightNodelons for MH dump
    topKNounsKelonyelondByTypelon
      .map {
        caselon (elonngagelonmelonntTypelon, rightList) =>
          val rightListMH =
            NounWithFrelonquelonncyList(rightList.nounWithFrelonquelonncyList.takelon(TopKRightNounsForMHDump))
          KelonyVal(elonngagelonmelonntTypelon, rightListMH)
      }
      .savelonAsCustomOutput(
        namelon = "WritelonTopKNounsToMHForDelonbuggelonr",
        DAL.writelonVelonrsionelondKelonyVal(
          topKRightNounsMHKelonyValDataselont,
          PathLayout.VelonrsionelondPath(prelonfix =
            rootMHPath + topKRightNounsMHOutputDir),
          instant = Instant.ofelonpochMilli(opts.intelonrval.gelontelonndMillis - 1L),
          elonnvironmelonntOvelonrridelon = dalelonnv,
        )
      )

    // Writelon truncatelond graph (MultiTypelonGraphTopKForRightNodelons) to DAL in KelonyVal format
    truncatelondGraphKelonyelondBySrc
      .map {
        caselon (lelonftNodelon, rightNodelonWithWelonightList) =>
          KelonyVal(lelonftNodelon, rightNodelonWithWelonightList)
      }.savelonAsCustomOutput(
        namelon = "WritelonTruncatelondMultiTypelonGraph",
        DAL.writelonVelonrsionelondKelonyVal(
          truncatelondMultiTypelonGraphKelonyValDataselont,
          PathLayout.VelonrsionelondPath(prelonfix =
            rootMHPath + truncatelondMultiTypelonGraphMHOutputDir),
          instant = Instant.ofelonpochMilli(opts.intelonrval.gelontelonndMillis - 1L),
          elonnvironmelonntOvelonrridelon = dalelonnv,
        )
      )

    // Writelon truncatelond graph (MultiTypelonGraphTopKForRightNodelons) to DAL in thrift format
    truncatelondGraph
      .map {
        caselon (lelonftNodelon, rightNodelonWithWelonight) =>
          MultiTypelonGraphelondgelon(lelonftNodelon, rightNodelonWithWelonight)
      }.savelonAsCustomOutput(
        namelon = "WritelonTruncatelondMultiTypelonGraphThrift",
        DAL.writelonSnapshot(
          multiTypelonGraphTopKForRightNodelonsSnapshotDataselont,
          PathLayout.FixelondPath(rootThriftPath + truncatelondMultiTypelonGraphThriftOutputDir),
          Instant.ofelonpochMilli(opts.intelonrval.gelontelonndMillis - 1L),
          DiskFormat.Thrift(),
          elonnvironmelonntOvelonrridelon = dalelonnv
        )
      )

    // Writelon full graph to DAL
    fullGraph
      .map {
        caselon (lelonftNodelon, rightNodelonWithWelonight) =>
          MultiTypelonGraphelondgelon(lelonftNodelon, rightNodelonWithWelonight)
      }
      .savelonAsCustomOutput(
        namelon = "WritelonFullMultiTypelonGraph",
        DAL.writelonSnapshot(
          fullMultiTypelonGraphSnapshotDataselont,
          PathLayout.FixelondPath(rootThriftPath + fullMultiTypelonGraphThriftOutputDir),
          Instant.ofelonpochMilli(opts.intelonrval.gelontelonndMillis - 1L),
          DiskFormat.Thrift(),
          elonnvironmelonntOvelonrridelon = dalelonnv
        )
      )

  }
}
